Fix slight flicker of text on retina screens due to pixel rounding

--- a/assets/stylesheets/permitting/page-layouts.scss
+++ b/assets/stylesheets/permitting/page-layouts.scss
@@ -228,7 +228,7 @@
   letter-spacing: 1px;
   position: sticky;
   position: -webkit-sticky;
-  top: 0; /* required */
+  top: -1px; /* fix retina flicker */
   background: #FFF;
   z-index: 10;
   a {
